# Projet_Mangetamain

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.lint  Dockerfile.test  Makefile  README.md  bjr.txt  docker-compose.yml  essai_CN.py  essai_andrew.txt  pyproject.toml  run_all.py  serve_docs.py  test_env_variables.py  test_logging.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: README.md  build_docs.py  changelog.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  mangetamain.preprocessing.feature.ingredients.rst  mangetamain.preprocessing.feature.nutrition.rst  mangetamain.preprocessing.feature.rating.rst  mangetamain.preprocessing.feature.seasonality.rst  mangetamain.preprocessing.feature.steps.rst  mangetamain.preprocessing.rst  modules.rst  usage.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree
docs/_build/markdown/: changelog.md  index.md
docs/api/: app.rst  core.rst  index.rst  mangetamain.clustering.rst  mangetamain.preprocessing.feature.ingredients.rst  mangetamain.preprocessing.feature.nutrition.rst  mangetamain.preprocessing.feature.rating.rst  mangetamain.preprocessing.feature.rst  mangetamain.preprocessing.feature.seasonality.rst  mangetamain.preprocessing.feature.steps.rst  mangetamain.preprocessing.rst  mangetamain.rst
docs/development/: code_style.rst  docker.rst  getting_started.rst  git.rst  index.rst  project_structure.rst
docs/installation/: index.rst  prerequisites.rst  setup.rst
docs/usage/: getting_started.rst  index.rst  interface.rst
notebooks/: EDA_Andrew copy.ipynb  EDA_Andrew.ipynb  EDA_Andrew_7_axes.ipynb  EDA_Chengbo.ipynb  EDA_Constance.ipynb  EDA_Hugo.ipynb  EDA_Rating_Mourad.ipynb  EDA_Rating_Mourad_draft.ipynb  EDA_recipes_clustering.ipynb  Untitled.ipynb
notebooks/cngy/: EDA_Constance.ipynb
notebooks/csv_rating/: rank_top20_combo_70_30.csv
notebooks/czhang/: dataprep.ipynb
notebooks/rating_artifacts/: proportions_par_classe_wilson.csv  rank_top20_combo_50_50.csv  rank_top20_combo_70_30.csv  rank_top20_logw.csv  rank_top20_wilson.csv  recipes_scores_all.csv  resume_proportion_recettes_notees.csv
page/: donnees_veg_meat.py  donnees_veg_meat_tag.ipynb
scripts/: build_and_push.sh  run_pipeline.sh
src/app/: clustering.py  datasets.py  download_from_s3.py  home.py  logging_config.py  main.py  methodology.py  run_all.py  settings.py  upload_to_s3.py
src/mangetamain/: __init__.py  core.py  logging_config.py  preprocessing.py  settings.py  utils.py
src/mangetamain/backend/: __init__.py  analyzers.py  exceptions.py  factories.py  interfaces.py  processors.py  repositories.py
src/mangetamain/clustering/: __init__.py  pipeline.py
src/mangetamain/data_processing/: interfaces.py  repositories.py
src/mangetamain/preprocessing/: __init__.py  factories.py  feature_engineering.py  interfaces.py  repositories.py  streamlit.py
tests/: conftest.py
tests/integration/: __init__.py  test_app_flow.py  test_placeholder.py  test_rating_pipeline.py
tests/integration/rating/: test_rating_pipeline.py
tests/unit/: __init__.py  test_clustering_pipeline_smoke.py  test_core.py  test_factories.py  test_feature_engineering.py  test_logging.py  test_logging_extended.py  test_placeholder.py  test_preprocessor.py  test_rating_analyser.py  test_rating_analyser_edge_cases.py  test_rating_strategies.py  test_repositories_errors.py  test_s3_download_stub.py  test_settings_extended.py  test_streamlit_feature_io.py  test_streamlit_helpers.py
tests/unit/app/: test_download_from_s3.py  test_download_from_s3_additional.py  test_download_from_s3_import_fail.py
tests/unit/rating/: test_rating_analyser.py  test_rating_analyser_edge_cases.py  test_rating_strategies.py
(+91 files in other folders)
