[project]
name = "mangetamain"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)"
]


[tool.poetry.group.dev.dependencies]
pytest-cov = ">=6.0.0,<7.0.0"
black = ">=24.10.0,<25.0.0"
flake8 = ">=7.1.1,<8.0.0"
ruff = ">=0.13.1,<0.14.0"
pre-commit = ">=3.8.0,<4.0.0"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"


[tool.black]
line-length = 88
target-version = ["py312"]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", "__pycache__"]


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E203"]

[tool.ruff.format]
preview = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
