[project]
name = "mangetamain"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "s3fs (>=2025.9.0,<2026.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[tool.poetry.group.dev.dependencies]
pytest-cov = ">=6.0.0,<7.0.0"
black = ">=24.10.0,<25.0.0"
flake8 = ">=7.1.1,<8.0.0"
ruff = ">=0.13.1,<0.14.0"
pre-commit = ">=3.8.0,<4.0.0"
sphinx = ">=7.1.2,<8.0.0"
sphinx-rtd-theme = ">=2.0.0,<3.0.0"
sentence-transformers = "^5.1.2"
umap-learn = "^0.5.9.post2"
hdbscan = "^0.8.40"
networkx = "^3.5"
python-louvain = "^0.16"
prince = "^0.16.1"
jupyterlab = "^4.4.10"
notebook = "^7.4.7"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"


[tool.black]
line-length = 88
target-version = ["py312"]


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", "__pycache__"]


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E203"]

[tool.ruff.format]
preview = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
